--- a/src/Components/Add/Add.css
+++ b/src/Components/Add/Add.css
@@ -1,3 +1,67 @@
+.AddContent{
+  transition: color 200ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+/* editor buttons container */
+#image-editor-container > section > div > ul {
+    padding: 0;
+    margin: 0;
+    text-align: right;
+}
+/* rotate right button */
+#image-editor-container > section > div > ul > li:nth-child(1) {
+  display:inline;
+}
+#image-editor-container > section > div > ul > li:nth-child(1) > button {
+  margin: 0;
+  font-size: 0.9rem;
+  padding: 1rem;
+  color: #000;
+  transition: background-color .15s ease-in-out;
+  align-items: center;
+  display: inline-flex;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+  overflow: visible;
+  font-family:inherit;
+  line-height: 1.15;
+  -webkit-font-smoothing: antialiased;
+  background: none;
+}
+
+#image-editor-container > section > div > br {
+
+}
+
+/* rotate left button */
+#image-editor-container > section > div > ul > li:nth-child(2) {
+  display:none;
+}
+
+/* save button */
+#image-editor-container > section > div > ul > li:nth-child(3) {
+  display:inline;
+  margin-left: 1em;
+}
+#image-editor-container > section > div > ul > li:nth-child(3) > button {
+  margin: 0;
+  font-size: 0.9rem;
+  padding: 1rem;
+  color: #000;
+  transition: background-color .15s ease-in-out;
+  align-items: center;
+  display: inline-flex;
+  border-style: solid;
+  border-width: 1px;
+  box-sizing: border-box;
+  overflow: visible;
+  font-family:inherit;
+  line-height: 1.15;
+  -webkit-font-smoothing: antialiased;
+  background: none;
+}
+
 @media(max-width: 767px) {
   /* phones */
 }
