adjust style for add form

--- a/src/Components/Add/Add.css
+++ b/src/Components/Add/Add.css
@@ -62,6 +62,9 @@
   -webkit-font-smoothing: antialiased;
   background: none;
 }
+.MuiTabs-flexContainer{
+  background-color: black;
+}
 .MuiInputBase-root .MuiInput-root .MuiInput-underline .MuiInputBase-formControl .MuiInput-formControl {
     color: black;
 }
