--- a/src/Components/SectionGrid/SectionGrid.css
+++ b/src/Components/SectionGrid/SectionGrid.css
@@ -20,3 +20,40 @@
    -o-box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
    box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
 }
+.SectionGridItem__OverlayContainer{
+  position: absolute;
+  color: white;
+ top: 0;
+ bottom: 0;
+ left: 0;
+ right: 0;
+ height: 100%;
+ width: 100%;
+ opacity: 0;
+ transition: .5s ease;
+ background-color: black;
+}
+
+.SectionGridItem__OverlayText{
+  color: white;
+  font-size: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  transition: .5s ease;
+  opacity: 0;
+}
+
+.SectionGridItemContainer:hover .SectionGridItem__OverlayContainer{
+  opacity:0.48;
+}
+.SectionGridItemContainer:hover .SectionGridItem__OverlayText{
+  opacity: 1;
+}
+.SectionGridItem__EventName{
+  font-family:'Didact Gothic'
+}
