--- a/src/Components/SectionGrid/SectionGrid.css
+++ b/src/Components/SectionGrid/SectionGrid.css
@@ -56,3 +56,18 @@
 .SectionGridItem__Detail{
   font-family: 'Didact Gothic'
 }
+
+.grow {
+    -moz-osx-font-smoothing: grayscale;
+    backface-visibility: hidden;
+    transform: translateZ(0);
+    transition: transform .25s ease-out;
+}
+
+.grow:hover, .grow:focus {
+    transform: scale(1.05);
+}
+
+.grow:active {
+    transform: scale(.9);
+}
