--- a/src/Components/SectionGrid/SectionGrid.css
+++ b/src/Components/SectionGrid/SectionGrid.css
@@ -15,10 +15,10 @@
   object-fit: cover;
   object-position: 50% ;
   overflow: hidden;
-  -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
+  /* -webkit-box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
    -moz-box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
    -o-box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
-   box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5);
+   box-shadow: 0 2px 10px rgba(0, 0, 0, .5), 0 2px 3px rgba(0, 0, 0, .5); */
 }
 .SectionGridItem__OverlayContainer{
   position: absolute;
@@ -35,6 +35,7 @@
 
 .SectionGridItem__OverlayText{
   color: white;
+  text-decoration: none;
   font-size: 20px;
   position: absolute;
   top: 50%;
